src/test/deca/context/invalid/LE/doubleDefHeritage.deca
// Historique:
//    cree le 22/01/2022

class C1{
    int a ;
}

class C2 extends C1 {
    int a ;
}